Fix: code aligned

--- a/src/sass/components/_tabs.scss
+++ b/src/sass/components/_tabs.scss
@@ -1,4 +1,5 @@
 @use '../variables';
+
 .tabs {
     overflow: hidden;
 
@@ -24,21 +25,22 @@
                 font-size: 0.875rem;
                 font-weight: $fw-400;
             }
-            &:hover{
+
+            &:hover {
                 color: $primary-color;
             }
 
-            &.active { position: relative;
-                // border-bottom: 1px solid #0F255F;
-                // color: #0F255F;
-                &::after{
+            &.active {
+                position: relative;
+
+                &::after {
                     position: absolute;
                     content: '';
                     bottom: 0;
                     left: 0;
                     width: 3.125rem;
                     height: 1px;
-                     background-color: #0F255F;
+                    background-color: #0F255F;
 
                 }
 
